# integer-toolkit

./: README.md  meson.build
.github/: FUNDING.yml
examples/example1/: README.md  meson.build
examples/example1/src/: main.c
examples/example1/subprojects/: integer-toolkit.wrap
include/: integer_toolkit.h
src/: integer_toolkit.c
test/: TestIntegerProperties.c  TestMinMaxFunctions.c  TestRangeFunctions.c  TestRemoveFunctions.c  TestSearchFunctions.c  TestSortingFunctions.c  TestUtilityFunctions.c
tests/: TestDivisibilityFunctions.c  TestIntegerInspection.c  TestIntegerManipulation.c  TestOccurrenceCounting.c  TestReductionFunctions.c  TestSortingFunctions.c  TestStringLikeFunctions.c  TestUtilityFunctions.c
